[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/objects/path/spawner_path.gd" type="Script" id=1]
[ext_resource path="res://src/objects/path/goal.tscn" type="PackedScene" id=2]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -0.011002, 0, 2.27692, 0, 0, 0, 0, 0, 0, 0.0172887, 0, -8.86919 ),
"tilts": PoolRealArray( 0, 0 )
}

[node name="SpawnerPath" type="Path"]
curve = SubResource( 1 )
script = ExtResource( 1 )
spawn_frequency_seconds = 2

[node name="Goal" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.05605, 1, -7.81307 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
